force-app/main/default/objects/Billing_Request__c/Billing_Request__c.object-meta.xml
<CustomObject>
    <description>Object to handle all requests related to billing, such as credit and sponsorship requests.</description>
    <label>Billing Request</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Billing Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>