force-app/main/default/objects/Billing_Request__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name/number of the case this billing request is related to.</description>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Billing Requests</relationshipLabel>
    <relationshipName>Billing_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>