force-app/main/default/objects/Billing_Request__c/fields/CFO_Approved__c.field-meta.xml
<CustomField>
    <fullName>CFO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that CFO has reviewed this record.</description>
    <label>CFO Approved</label>
    <type>Checkbox</type>
</CustomField>