force-app/main/default/objects/Billing_Request__c/fields/COO_Approved__c.field-meta.xml
<CustomField>
    <fullName>COO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that COO has reviewed this record.</description>
    <label>COO Approved</label>
    <type>Checkbox</type>
</CustomField>