force-app/main/default/objects/Billing_Request__c/fields/Credit_Calculation_Validated__c.field-meta.xml
<CustomField>
    <fullName>Credit_Calculation_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the credit admin has validated the credit amount being asked for.</description>
    <inlineHelpText>Indicates that the credit admin has validated the credit amount being asked for.</inlineHelpText>
    <label>Credit Calculation Validated</label>
    <type>Checkbox</type>
</CustomField>