force-app/main/default/objects/Billing_Request__c/fields/Credit_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Posted_Date__c</fullName>
    <description>Date that accounting applied the credit.</description>
    <label>Credit Posted Date</label>
    <type>Date</type>
</CustomField>