force-app/main/default/objects/Billing_Request__c/fields/Credit_Submitted_for_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Submitted_for_Approval_Date__c</fullName>
    <description>The date that the credit was submitted for approval.</description>
    <inlineHelpText>The date that the credit was submitted for approval.</inlineHelpText>
    <label>Credit Submitted for Approval Date</label>
    <type>Date</type>
</CustomField>