force-app/main/default/objects/Billing_Request__c/fields/CWS_Contract_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Contract_Term_Start_Date__c</fullName>
    <description>Start Date of the Contract Term.</description>
    <label>Contract Term - Start Date</label>
    <type>Date</type>
</CustomField>