force-app/main/default/objects/Billing_Request__c/fields/CWS_Credit_Calculation__c.field-meta.xml
<CustomField>
    <fullName>CWS_Credit_Calculation__c</fullName>
    <label>Credit Calculation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>