force-app/main/default/objects/Billing_Request__c/fields/CWS_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Credit_Type__c</fullName>
    <description>Refers to the Type of Credit request raised by the Team</description>
    <inlineHelpText>Refers to the Type of Credit request raised by the Team</inlineHelpText>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Satisfaction/Courtesy</fullName>
            </value>
            <value>
                <fullName>Internal Error</fullName>
            </value>
            <value>
                <fullName>Sales Discretionary Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>