force-app/main/default/objects/Billing_Request__c/fields/CWS_IsAproved__c.field-meta.xml
<CustomField>
    <fullName>CWS_IsAproved__c</fullName>
    <formula>OR(IF(ISPICKVAL( Status__c , &quot;Approved&quot;), true,false),IF(ISPICKVAL( Status__c , &quot;Posted&quot;), true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CWS IsApproved?</label>
    <type>Checkbox</type>
</CustomField>