force-app/main/default/objects/Billing_Request__c/fields/CWS_Manage_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>CWS_Manage_Ticket_Number__c</fullName>
    <description>Corresponding ticket number from Manage.</description>
    <label>Manage Ticket Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>