force-app/main/default/objects/Billing_Request__c/fields/CWS_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Partner_Type__c</fullName>
    <description>Partner Type (HT/LT/TT, Peer Group Members, HTG etc.)</description>
    <label>Partner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>