force-app/main/default/objects/Billing_Request__c/fields/CWS_Product_Subscribed__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Subscribed__c</fullName>
    <description>All of the Products that a Partner subscribes to.</description>
    <label>Product Subscribed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Product_Interest</valueSetName>
    </valueSet>
</CustomField>