force-app/main/default/objects/Billing_Request__c/fields/CWS_Product_Subscribed_DEPRECATED__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_Subscribed_DEPRECATED__c</fullName>
    <description>Product(s) the Partner subscribes to.</description>
    <label>Product Subscribed_DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>