force-app/main/default/objects/Billing_Request__c/fields/CWS_Products__c.field-meta.xml
<CustomField>
    <fullName>CWS_Products__c</fullName>
    <description>Multi-select field to pick the required products for this BR</description>
    <inlineHelpText>Multi-select field to pick the required products for this BR</inlineHelpText>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fortify</fullName>
            </value>
            <value>
                <fullName>Command</fullName>
            </value>
            <value>
                <fullName>Recover</fullName>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Identify</fullName>
            </value>
            <value>
                <fullName>Control</fullName>
            </value>
            <value>
                <fullName>ITBoost</fullName>
            </value>
            <value>
                <fullName>IT Nation Evolve</fullName>
            </value>
            <value>
                <fullName>BrightGauge</fullName>
            </value>
            <value>
                <fullName>LMI Rescue</fullName>
            </value>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>Webroot</fullName>
            </value>
            <value>
                <fullName>Assist Tech Advantage</fullName>
            </value>
            <value>
                <fullName>Assist Dedicated Tech</fullName>
            </value>
            <value>
                <fullName>Assist Help Desk</fullName>
            </value>
            <value>
                <fullName>Perch</fullName>
            </value>
            <value>
                <fullName>StratoZen</fullName>
            </value>
            <value>
                <fullName>Other-3rd party products</fullName>
            </value>
            <value>
                <fullName>R1 Soft</fullName>
            </value>
            <value>
                <fullName>Assist</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Not Product Related</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Dedicated Tech</fullName>
            </value>
            <value>
                <fullName>Network Assessment</fullName>
            </value>
            <value>
                <fullName>Network Management</fullName>
            </value>
            <value>
                <fullName>Server Backup Manager (R1Soft)</fullName>
            </value>
            <value>
                <fullName>Tech Advantage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>