force-app/main/default/objects/Billing_Request__c/fields/CWS_Relevant_Department__c.field-meta.xml
<CustomField>
    <fullName>CWS_Relevant_Department__c</fullName>
    <description>Credit Request pertaining to the relevant department</description>
    <inlineHelpText>Credit Request pertaining to the relevant department</inlineHelpText>
    <label>Relevant Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Partner Success</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>