force-app/main/default/objects/Billing_Request__c/fields/Date_of_Sponsorship_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Sponsorship_Event__c</fullName>
    <description>Date that the sponsorship event is taking place.</description>
    <inlineHelpText>Date that the sponsorship event is taking place.</inlineHelpText>
    <label>Date of Sponsorship Event</label>
    <type>Date</type>
</CustomField>