force-app/main/default/objects/Billing_Request__c/fields/Denied_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denied_Reason__c</fullName>
    <description>High-level reason that the credit / sponsorship was denied.</description>
    <label>Denied Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost Prohibitive</fullName>
            </value>
            <value>
                <fullName>Insufficient ROI</fullName>
            </value>
            <value>
                <fullName>Insufficient Cause</fullName>
            </value>
            <value>
                <fullName>Partner In Poor Standing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>