force-app/main/default/objects/Billing_Request__c/fields/Denied_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Denied_Reason_Notes__c</fullName>
    <description>Detail around denied request.</description>
    <label>Denied Reason Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>