force-app/main/default/objects/Billing_Request__c/fields/Partner_Care_Manager_Approved__c.field-meta.xml
<CustomField>
    <fullName>Partner_Care_Manager_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Partner Care Manager has reviewed this record.</description>
    <label>Partner Care Manager Approved</label>
    <type>Checkbox</type>
</CustomField>