force-app/main/default/objects/Billing_Request__c/fields/Partner_Care_Notes__c.field-meta.xml
<CustomField>
    <fullName>Partner_Care_Notes__c</fullName>
    <description>Details on research, why a credit was approved, denied, or negotiated and/or how the negotiated amt was determined.</description>
    <label>Billing Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>