force-app/main/default/objects/Billing_Request__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact with the partner account that requested the credit / sponsorship.</description>
    <label>Partner Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Requests</relationshipLabel>
    <relationshipName>Billing_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>