force-app/main/default/objects/Billing_Request__c/fields/Partner_s_Current_MRR__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_Current_MRR__c</fullName>
    <description>The current partner MRR for all products.</description>
    <label>Partner&apos;s Current MRR</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>