force-app/main/default/objects/Billing_Request__c/fields/Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason__c</fullName>
    <description>High-level reason for the credit.</description>
    <label>Primary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HD Service Issue</fullName>
            </value>
            <value>
                <fullName>NOC Service Issue</fullName>
            </value>
            <value>
                <fullName>Partner Provisioning Error</fullName>
            </value>
            <value>
                <fullName>Pricing Agreement Discount</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Promotion Discount</fullName>
            </value>
            <value>
                <fullName>Vault Cancellation</fullName>
            </value>
            <value>
                <fullName>Bank Fees</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Write-Off</fullName>
            </value>
            <value>
                <fullName>Onboarding issue</fullName>
            </value>
            <value>
                <fullName>Waive Fee</fullName>
            </value>
            <value>
                <fullName>Support Service Issue</fullName>
            </value>
            <value>
                <fullName>Invoice Error</fullName>
            </value>
            <value>
                <fullName>Pricing Error</fullName>
            </value>
            <value>
                <fullName>Contract Surcharge</fullName>
            </value>
            <value>
                <fullName>Processing Delay - Contract Re-Write</fullName>
            </value>
            <value>
                <fullName>Processing Delay - Downgrade</fullName>
            </value>
            <value>
                <fullName>Processing Delay - Contract Cancellation</fullName>
            </value>
            <value>
                <fullName>Contract Disputes - Sales</fullName>
            </value>
            <value>
                <fullName>Courtesy Credit - Escalation</fullName>
            </value>
            <value>
                <fullName>Courtesy Credit - Sales Discretionary</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
                <isActive>false</isActive>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Courtesy Credit</fullName>
                <isActive>false</isActive>
                <label>Courtesy Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>