force-app/main/default/objects/Billing_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product that this request pertains to.</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Product_Interest</valueSetName>
    </valueSet>
</CustomField>