force-app/main/default/objects/Billing_Request__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in the credit approval process as an approver. Carl Resnik (RMM), Walter Clarke (HD), Brian Downey (Security), and David LeClair (BDR).</description>
    <inlineHelpText>Used in the credit approval process as an approver. Carl Resnik (RMM), Walter Clarke (HD), Brian Downey (Security), and David LeClair (BDR).</inlineHelpText>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Billing_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>