force-app/main/default/objects/Billing_Request__c/fields/Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Detail__c</fullName>
    <description>I.E. Partner no longer using one server on a vault appliance, contract term ends in July, Partner would like to remove one agent prior to the end of the term.</description>
    <label>Reason Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>