force-app/main/default/objects/Billing_Request__c/fields/Request_Approved_Denied_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Approved_Denied_Date__c</fullName>
    <description>Date that the billing request was approved / denied by Sales Ops. Automatically set in process builder and determined by Status.</description>
    <label>Request Approved / Denied Date</label>
    <type>Date</type>
</CustomField>