force-app/main/default/objects/Billing_Request__c/fields/Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount__c</fullName>
    <description>Amount being requested by the partner or representative.</description>
    <label>Requested Amount</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>