force-app/main/default/objects/Billing_Request__c/fields/Required_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Required_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please attach documentation to this request or acknowledge that you are sending via email to Sales Operations. Documentation can be: letter of solicitation, sponsorship request on letterhead, or event flyer.</description>
    <inlineHelpText>Please attach documentation to this request or acknowledge that you are sending via email to Sales Operations. Documentation can be: letter of solicitation, sponsorship request on letterhead, or event flyer.</inlineHelpText>
    <label>Required Documentation</label>
    <type>Checkbox</type>
</CustomField>