force-app/main/default/objects/Billing_Request__c/fields/Service_Month_DEPRECATED__c.field-meta.xml
<CustomField>
    <fullName>Service_Month_DEPRECATED__c</fullName>
    <description>A field for credit requests that let&apos;s accounting know what month to recognize the credit in.</description>
    <inlineHelpText>A field for credit requests that let&apos;s accounting know what month to recognize the credit in.</inlineHelpText>
    <label>Service Month_DEPRECATED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>