force-app/main/default/objects/Billing_Request__c/fields/Service_Year__c.field-meta.xml
<CustomField>
    <fullName>Service_Year__c</fullName>
    <description>A field for credit requests that let&apos;s accounting know what year to recognize the credit in.</description>
    <inlineHelpText>A field for credit requests that let&apos;s accounting know what year to recognize the credit in.</inlineHelpText>
    <label>Service Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>