force-app/main/default/objects/Billing_Request__c/fields/Sponsorship_Description__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Description__c</fullName>
    <description>Detailed description of the event you are requesting sponsorship dollars for.</description>
    <inlineHelpText>Detailed description of the event you are requesting sponsorship dollars for.</inlineHelpText>
    <label>Sponsorship Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>