force-app/main/default/objects/Billing_Request__c/fields/Sponsorship_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Feedback__c</fullName>
    <description>Feedback provided by the rep on how the event went and what impact it has had on the partner&apos;s relationship with Continuum.</description>
    <label>Sponsorship Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>