force-app/main/default/objects/Billing_Request__c/fields/Sponsorship_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Payment_Status__c</fullName>
    <description>Used by Sales Ops to track the payment status of a sponsorship. When status is &quot;Invoice Received, Not Paid&quot; the sponsorship record will appear on a report for accounting to retrieve the invoice and make payment.</description>
    <label>Sponsorship Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Invoice</fullName>
            </value>
            <value>
                <fullName>Invoice Received, Not Paid</fullName>
            </value>
            <value>
                <fullName>Invoice Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>