force-app/main/default/objects/Billing_Request__c/fields/Validated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Validated_Amount__c</fullName>
    <description>The credit amount that ops is requesting to be approved (can be different from what partner or rep requested).</description>
    <inlineHelpText>The credit amount that ops is requesting to be approved (can be different from what partner or rep requested).</inlineHelpText>
    <label>Validated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>